Make sure that items in these toolbars are aligned vertically in the center

--- a/src/tibet/tools/sherpa/TP.sherpa.methodEditorToolbarContent/TP.sherpa.methodEditorToolbarContent.css
+++ b/src/tibet/tools/sherpa/TP.sherpa.methodEditorToolbarContent/TP.sherpa.methodEditorToolbarContent.css
@@ -3,9 +3,12 @@
 @namespace tibet url("http://www.technicalpursuit.com/1999/tibet");
 
 sherpa|methodEditorToolbarContent {
+
     display: flex;
+
     flex-direction: row;
     justify-content: flex-end;
+    align-items: center;
 
     left: 0;
     right: 0;
