--- a/src/tibet/tools/sherpa/TP.sherpa.uriEditorToolbarContent/TP.sherpa.uriEditorToolbarContent.css
+++ b/src/tibet/tools/sherpa/TP.sherpa.uriEditorToolbarContent/TP.sherpa.uriEditorToolbarContent.css
@@ -9,6 +9,7 @@ sherpa|uriEditorToolbarContent {
 
     flex-direction: row;
     justify-content: flex-end;
+    align-items: center;
 
     left: 0;
     right: 0;
